# nmea2xyz

./: .gitignore  README.md  pyproject.toml
.github/workflows/: ci.yml
src/nmea2xyz/: __init__.py  __main__.py  _nmea2xyz.py
tests/: 2025-06-28_18-44-12.nmea.txt
